apps/netbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
spec:
  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: netbox

  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
    spec:
      containers:
        - name: netbox
          image: lscr.io/linuxserver/netbox:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          volumeMounts:
            - name: config
              mountPath: /config

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            failureThreshold: 3

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: netbox
