apps/netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netbox
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
